fix scrolling and i-frame bugs when dealing with overflow. Holy shit that took forever to find out why it was happening.

--- a/client/src/sass/modules/hero.scss
+++ b/client/src/sass/modules/hero.scss
@@ -3,7 +3,7 @@
   height: 100vh;
 }
 .hero-screen {
-  height: 100vh;
+  height: 99vh;
   width: 100vw;
   background: $backgroundDefaultColor;
   position: absolute;
