--- a/client/src/sass/modules/portfolio.scss
+++ b/client/src/sass/modules/portfolio.scss
@@ -6,7 +6,7 @@
 }
 .portfolio-line {
   position: relative;
-  height: 100%;
+  height: 99%;
   width: 30%;
   margin: auto;
   top: 5px;
