--- a/client/src/stylesheets/app.css
+++ b/client/src/stylesheets/app.css
@@ -33,7 +33,7 @@ h5 {
   height: 100vh; }
 
 .hero-screen {
-  height: 100vh;
+  height: 99vh;
   width: 100vw;
   background: #fffffe;
   position: absolute;
@@ -206,7 +206,7 @@ h5 {
 
 .portfolio-line {
   position: relative;
-  height: 100%;
+  height: 99%;
   width: 30%;
   margin: auto;
   top: 5px;
